Add Cache Memory

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,14 +8,22 @@
     }
   },
   "ConnectionStrings": {
-    "MsComm": "Server=DESKTOP-3290BLE;Database=GraduationProject;Trusted_Connection=True;",
-    "HangfireConnection": "Server=DESKTOP-3290BLE;Database=Hangfire;Trusted_Connection=True;"
+    "MsComm": "Server=.;Database=GraduationProject;Trusted_Connection=True;",
+    "HangfireConnection": "Server=.;Database=Hangfire;Trusted_Connection=True;"
   },
-  "CompanyName": "H&M",
+
   "TokenOptions": {
     "Audience": "www.todeb.com",
     "Issuer": "www.todeb.com",
     "AccessTokenExpiration": 15,
     "SecurityKey": "sifrelemeanahtari"
-  }
+  },
+  "RedisEndpointInfo": {
+    "Endpoint": "redis-15550.c284.us-east1-2.gce.cloud.redislabs.com",
+    "Port": 15550,
+    "Username": "default",
+    "Password": "fC6LVE5I6l2V79waIkce04zsXYtjuGVF",
+    "DatabaseName": "Bkiye-free-db"
+  },
+  "MongoDatabase": "CreditCard"
 }
